fixed gap between nav bar and the shop drop down menu

--- a/style.css
+++ b/style.css
@@ -93,7 +93,7 @@ h1,
   z-index: 5;
   box-shadow: inset 0 2px 8px rgba(0, 0, 0, 0.15);
   height: 20rem;
-  top: 70px;
+  top: 68px;
   left: 0;
   display: flex;
   justify-content: center;
